--- a/src/rgbixtouri/alpha/language/MessageBundle.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle.properties
@@ -20,3 +20,11 @@ test.hello = Hello_base
 #
 
 base.title.aplicationtitle.msg = RGBixtouri
+
+graphespanel.axename.blue.msg = Blue
+graphespanel.axename.green.msg = Green
+graphespanel.axename.red.msg = Red
+
+
+imageselectorpanel.button.folder.msg = Folder
+imageSelectorPanel.button.folder.msg = Image
