--- a/src/rgbixtouri/alpha/language/MessageBundle.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle.properties
@@ -21,6 +21,11 @@ test.hello = Hello_base
 
 base.title.aplicationtitle.msg = RGBixtouri
 
+frame.menu.exit.msg = Exit
+frame.menu.language.msg = Language
+frame.menu.menu.msg = Menu
+
+
 graphespanel.axename.blue.msg = Blue
 graphespanel.axename.green.msg = Green
 graphespanel.axename.red.msg = Red
@@ -28,3 +33,10 @@ graphespanel.axename.red.msg = Red
 
 imageselectorpanel.button.folder.msg = Folder
 imageSelectorPanel.button.folder.msg = Image
+
+
+#---------------------------------------
+#The follow texte must not change
+frame.menu.english.msg = English
+frame.menu.french.msg = Français
+frame.menu.german.msg = Deutsch
