modification panel de base (plus de cluster)

--- a/src/rgbixtouri/alpha/language/MessageBundle.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle.properties
@@ -32,7 +32,9 @@ graphespanel.axename.red.msg = Red
 
 
 imageselectorpanel.button.folder.msg = Folder
-imageSelectorPanel.button.folder.msg = Image
+imageselectorpanel.button.folder.msg = Image
+
+progressdialog.name.progression.msg = Progression: 
 
 
 #---------------------------------------
