--- a/src/rgbixtouri/alpha/language/MessageBundle.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle.properties
@@ -31,10 +31,10 @@ graphespanel.axename.green.msg = Green
 graphespanel.axename.red.msg = Red
 
 
-imageselectorpanel.button.folder.msg = Folder
-imageselectorpanel.button.folder.msg = Image
+imagelibrarypanel.button.folder.msg = Folder
+imagelibrarypanel.button.image.msg = Image
 
-progressdialog.name.progression.msg = Progression: 
+progressdialog.label.progression.msg = Progression: 
 
 
 #---------------------------------------
