--- a/src/rgbixtouri/alpha/language/MessageBundle_fr.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle_fr.properties
@@ -3,3 +3,13 @@ test.hello = Salut
 frame.menu.exit.msg = Quitter
 frame.menu.language.msg = Langage
 frame.menu.menu.msg = Menu
+
+graphespanel.axename.blue.msg = Blue
+graphespanel.axename.green.msg = Green
+graphespanel.axename.red.msg = Red
+
+
+imagelibrarypanel.button.folder.msg = Dossier
+imagelibrarypanel.button.image.msg = Image
+
+progressdialog.label.progression.msg = Progression: 
