--- a/src/rgbixtouri/alpha/language/MessageBundle.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle.properties
@@ -4,7 +4,6 @@
 
 
 #For test
-test.hello = Hello_base
 
 
 #How to organize the File:
@@ -21,6 +20,11 @@ test.hello = Hello_base
 
 base.title.aplicationtitle.msg = RGBixtouri
 
+controlpanel.button.modify.msg = Modify
+controlpanel.button.skin.msg = Skin
+controlpanel.button.wound.msg = Wound
+
+
 frame.menu.exit.msg = Exit
 frame.menu.language.msg = Language
 frame.menu.menu.msg = Menu
@@ -35,6 +39,8 @@ imagelibrarypanel.button.folder.msg = Folder
 imagelibrarypanel.button.image.msg = Image
 
 progressdialog.label.progression.msg = Progression: 
+
+selector.imagepanel.placeholder.msg = Select an image from the sidebar on the left to begin to edit it.
 
 
 #---------------------------------------
