--- a/src/rgbixtouri/alpha/language/MessageBundle_fr.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle_fr.properties
@@ -1,4 +1,7 @@
-test.hello = Salut
+
+controlpanel.button.modify.msg = Modifier
+controlpanel.button.skin.msg = Peau
+controlpanel.button.wound.msg = Plaie
 
 frame.menu.exit.msg = Quitter
 frame.menu.language.msg = Langage
@@ -13,3 +16,5 @@ imagelibrarypanel.button.folder.msg = Dossier
 imagelibrarypanel.button.image.msg = Image
 
 progressdialog.label.progression.msg = Progression: 
+
+selector.imagepanel.placeholder.msg = Séléctionnez un image sur la gauche pour pouvoir l'éditer.
