--- a/src/rgbixtouri/alpha/language/MessageBundle_en.properties
+++ b/src/rgbixtouri/alpha/language/MessageBundle_en.properties
@@ -1,1 +1,22 @@
-test.hello = Hello
+
+controlpanel.button.modify.msg = Modify
+controlpanel.button.skin.msg = Skin
+controlpanel.button.wound.msg = Wound
+
+
+frame.menu.exit.msg = Exit
+frame.menu.language.msg = Language
+frame.menu.menu.msg = Menu
+
+
+graphespanel.axename.blue.msg = Blue
+graphespanel.axename.green.msg = Green
+graphespanel.axename.red.msg = Red
+
+
+imagelibrarypanel.button.folder.msg = Folder
+imagelibrarypanel.button.image.msg = Image
+
+progressdialog.label.progression.msg = Progression: 
+
+selector.imagepanel.placeholder.msg = Select an image from the sidebar on the left to begin to edit it.
