--- a/src/language/MessageBundle.properties
+++ b/src/language/MessageBundle.properties
@@ -29,18 +29,16 @@ frame.menu.exit.msg = Exit
 frame.menu.language.msg = Language
 frame.menu.menu.msg = Menu
 
-
-graphespanel.axename.blue.msg = Blue
-graphespanel.axename.green.msg = Green
-graphespanel.axename.red.msg = Red
-
+imagelibrarycontroller.message.extension.err = The selected file is not supported.
+imagelibrarycontroller.message.file.err = The file does not exist
+imagelibrarycontroller.message.folder.err = The selected folder does not exist
 
 imagelibrarypanel.button.folder.msg = Folder
 imagelibrarypanel.button.image.msg = Image
 
 progressdialog.label.progression.msg = Progression: 
 
-selector.imagepanel.placeholder.msg = Select an image from the sidebar on the left to begin to edit it.
+selector.imagepanel.placeholder.msg = Select an image from the side bar on the left to begin to edit it.
 
 
 #---------------------------------------
