--- a/src/language/MessageBundle_de.properties
+++ b/src/language/MessageBundle_de.properties
@@ -7,6 +7,10 @@ frame.menu.exit.msg = Schliessen
 frame.menu.language.msg = Sprache
 frame.menu.menu.msg = Menü
 
+imagelibrarycontroller.message.extension.err = Die ausgewählte Datei wird nicht unterstützt.
+imagelibrarycontroller.message.file.err = Die Datei existiert nicht
+imagelibrarycontroller.message.folder.err = Der gewählte Ordner nicht vorhanden
+
 imagelibrarypanel.button.folder.msg = Datei
 imagelibrarypanel.button.image.msg = Bild
 
