--- a/src/language/MessageBundle_en.properties
+++ b/src/language/MessageBundle_en.properties
@@ -1,12 +1,15 @@
-
 controlpanel.button.modify.msg = Modify
 controlpanel.button.skin.msg = Skin
 controlpanel.button.wound.msg = Wound
+
 
 frame.menu.exit.msg = Exit
 frame.menu.language.msg = Language
 frame.menu.menu.msg = Menu
 
+imagelibrarycontroller.message.extension.err = The selected file is not supported.
+imagelibrarycontroller.message.file.err = The file does not exist
+imagelibrarycontroller.message.folder.err = The selected folder does not exist
 
 imagelibrarypanel.button.folder.msg = Folder
 imagelibrarypanel.button.image.msg = Image
