--- a/src/language/MessageBundle_fr.properties
+++ b/src/language/MessageBundle_fr.properties
@@ -8,8 +8,14 @@ frame.menu.language.msg = Langage
 frame.menu.menu.msg = Menu
 
 
+imagelibrarycontroller.message.extension.err = Le fichier choisi n'est pas pris en charge.
+imagelibrarycontroller.message.file.err = Le fichier n'est pas existant
+imagelibrarycontroller.message.folder.err = Le dossier choisi n'est pas existant
+
+
 imagelibrarypanel.button.folder.msg = Dossier
 imagelibrarypanel.button.image.msg = Image
+
 
 progressdialog.label.progression.msg = Progression : 
 
