--- a/src/language/MessageBundle.properties
+++ b/src/language/MessageBundle.properties
@@ -40,6 +40,13 @@ progressdialog.label.progression.msg = Progression:
 
 selector.imagepanel.placeholder.msg = Select an image from the side bar on the left to begin to edit it.
 
+zonetablemodel.columnname.num.msg = N°
+zonetablemodel.columnname.type.msg = Type
+zonetablemodel.columnname.surface.msg = Surface
+
+zonetablemodel.typename.skin.msg = Skin
+zonetablemodel.typename.wound.msg = Wound
+
 
 #---------------------------------------
 #The follow texte must not change
