--- a/src/language/MessageBundle_de.properties
+++ b/src/language/MessageBundle_de.properties
@@ -17,3 +17,10 @@ imagelibrarypanel.button.image.msg = Bild
 progressdialog.label.progression.msg = Fortschreiten: 
 
 selector.imagepanel.placeholder.msg = Wählen Sie ein Bild auf der linken Seite zu bearbeiten.
+
+zonetablemodel.columnname.num.msg = N°
+zonetablemodel.columnname.type.msg = Typ
+zonetablemodel.columnname.surface.msg = Oberfläche
+
+zonetablemodel.typename.skin.msg = Haut
+zonetablemodel.typename.wound.msg = Wounde
