--- a/src/language/MessageBundle_en.properties
+++ b/src/language/MessageBundle_en.properties
@@ -17,3 +17,10 @@ imagelibrarypanel.button.image.msg = Image
 progressdialog.label.progression.msg = Progression: 
 
 selector.imagepanel.placeholder.msg = Select an image from the side bar on the left to begin to edit it.
+
+zonetablemodel.columnname.num.msg = N°
+zonetablemodel.columnname.type.msg = Type
+zonetablemodel.columnname.surface.msg = Surface
+
+zonetablemodel.typename.skin.msg = Skin
+zonetablemodel.typename.wound.msg = Wound
