--- a/src/language/MessageBundle_fr.properties
+++ b/src/language/MessageBundle_fr.properties
@@ -20,3 +20,10 @@ imagelibrarypanel.button.image.msg = Image
 progressdialog.label.progression.msg = Progression : 
 
 selector.imagepanel.placeholder.msg = Séléctionnez un image sur la gauche pour pouvoir l'éditer.
+
+zonetablemodel.columnname.num.msg = N°
+zonetablemodel.columnname.type.msg = Type
+zonetablemodel.columnname.surface.msg = Surface
+
+zonetablemodel.typename.skin.msg = Peau
+zonetablemodel.typename.wound.msg = Plaie
